fix(bug): hide empty descriptions, adjust spacing

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -111,6 +111,7 @@
   padding-top: 0;
   text-align: left;
   word-wrap: break-word;
+  line-height: normal;
 }
 
 .projects-horizontal-rule {
